--- a/app/src/main/res/layout/content_my.xml
+++ b/app/src/main/res/layout/content_my.xml
@@ -11,7 +11,7 @@
     <LinearLayout
         android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="128dp">
+        android:layout_height="120dp">
 
         <EditText android:id="@+id/edit_message"
             android:layout_weight="1"
@@ -37,7 +37,7 @@
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:id="@+id/textView"
-            android:layout_gravity="center_vertical"
+            android:layout_gravity="center_horizontal|top"
             android:textSize="36sp"
             android:gravity="center_vertical|center_horizontal"
             android:layout_marginBottom="32dp" />
